--- a/style.css
+++ b/style.css
@@ -112,6 +112,19 @@ footer {
     align-items: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .games {
+    /* background-color: red; */
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, calc(calc(100% - 20px) / 1));
+    grid-template-rows: auto;
+    gap: 10px;
+  }
+}
+
+
 .games {
     /* background-color: red; */
     width: 100%;
