--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ footer {
     align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen {
   .games {
     /* background-color: red; */
     width: 100%;
