--- a/style.css
+++ b/style.css
@@ -1,28 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
 
 :root {
-    --colour-black: #8E8E93;
-    --colour-grey: #48484A;
-    --colour-white: #F2F2F7;
-    --colour-red: #94498d;
-    --colour-text: #1C1C1E;
-    --colour-link: #272d28;
-
+    --colour-black: hsl(240, 5%, 20%);
+    --colour-accent: hsl(300, 50%, 40%);
+    --colour-socials: hsl(240, 5%, 40%);
+    --colour-navText: hsl(240, 25%, 95%);;
 
     --active-fontSize: 20px;
     --alternate-fontSize: 12px;
     --active-fontFamily: 'Open Sans', sans-serif;
 }
 
+@media (prefers-color-scheme: light) {
+    :root {
+        --colour-body: hsl(240, 20%, 95%);
+        --colour-text: hsl(240, 5%, 10%);
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
-        --colour-black: #48484A;
-        --colour-grey: #8E8E93;
-        --colour-white: #1C1C1E;
-        --colour-red: #94498d;
-        --colour-text: #F2F2F7;
-        --colour-link: #def5ff;
-
+        --colour-body: hsl(240, 5%, 10%);
+        --colour-text: hsl(240, 25%, 90%);
     }
 }
 
@@ -38,7 +37,7 @@ html {
 }
 
 body {
-    background-color: var(--colour-white);
+    background-color: var(--colour-body);
     color: var(--colour-text);
     margin: 0;
     padding: 0;
@@ -73,8 +72,9 @@ header {
     align-items: center;
 }
 
-header a {
-    color: var(--colour-text);
+header a, 
+.link-nav {
+    color: var(--colour-navText);
 }
 
 h3,
@@ -114,13 +114,13 @@ p {
 }
 
 .tab-active {
-    color: var(--colour-red);
+    color: var(--colour-accent);
     font-weight: bold;
     font-style: italic;
 }
 
 main {
-    background-color: var(--colour-white);
+    /* background-color: var(--colour-white); */
     width: 80%;
     height: 100%;
     padding: 60px 10%;
@@ -133,7 +133,7 @@ main {
 
 footer {
     background-color: var(--colour-black);
-    color: var(--colour-text);
+    color: var(--colour-navText);
     width: 80%;
     height: 60px;
     /* min-height: 60px;
@@ -179,7 +179,7 @@ footer {
 }
 
 .game-widget>img {
-    background-color: var(--colour-grey);
+    background-color: var(--colour-socials);
     width: 100%;
     aspect-ratio: 1.5;
     border-radius: 5px;
@@ -206,7 +206,7 @@ footer {
 
 .game-widget>p {
     /* background-color: blue; */
-    color: var(--colour-red);
+    color: var(--colour-accent);
     width: 100%;
     height: 30px;
     display: flex;
@@ -239,19 +239,11 @@ footer {
 .socials>a,
 a>svg {
     height: 30px;
-    color: var(--colour-red);
+    color: var(--colour-accent);
 }
 
-.text-red {
-    color: var(--colour-red);
-}
-
-.text-white {
-    color: var(--colour-text);
-}
-
-.text-link {
-    color: var(--colour-link);
+.text-accent {
+    color: var(--colour-accent);
 }
 
 .about-me {
