--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
 
 :root {
-    --colour-black: hsl(240, 5%, 20%);
+    --colour-naf: hsl(240, 5%, 20%);
     --colour-accent: hsl(300, 50%, 40%);
     --colour-socials: hsl(240, 5%, 40%);
     --colour-navText: hsl(240, 25%, 95%);;
@@ -29,6 +29,11 @@
 a {
     text-decoration: none;
     color: var(--colour-text);
+}
+
+input::placeholder,
+textarea::placeholder {
+    color: var(--colour-socials);
 }
 
 html {
@@ -60,7 +65,7 @@ body {
 }
 
 header {
-    background-color: var(--colour-black);
+    background-color: var(--colour-naf);
     color: var(--colour-white);
     width: 80%;
     height: 60px;
@@ -122,18 +127,17 @@ p {
 main {
     /* background-color: var(--colour-white); */
     width: 80%;
-    max-width: 1920px;
     height: 100%;
     padding: 60px 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* gap: 60px; */
+    gap: 60px;
 }
 
 footer {
-    background-color: var(--colour-black);
+    background-color: var(--colour-naf);
     color: var(--colour-navText);
     width: 80%;
     height: 60px;
@@ -291,4 +295,96 @@ a>svg {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.form-contact {
+    /* background-color: red; */
+    width: 100%;
+    max-width: 1920px;
+    height: fit-content;
+    display: grid;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.form-details {
+    /* background-color: yellow; */
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 20px;
+}
+
+.form-details > div {
+    /* background-color: yellow; */
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+}
+
+.form-details label {
+    width: fit-content;
+    height: 100%;
+}
+
+.form-details input {
+    background-color: var(--colour-body);
+    color: var(--colour-text);
+    width: 100%;
+    height: 100%;
+    border: 2px solid var(--colour-accent);
+    border-radius: 5px;
+    padding: 0 20px;
+    font-family: var(--active-fontFamily);
+    font-size: calc(var(--active-fontSize) / 1.2);
+}
+
+.form-message {
+    /* background-color: green; */
+    width: 100%;
+    min-height: 70px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.form-message label {
+    width: fit-content;
+    height: 30px;
+}
+
+.form-message textarea {
+    background-color: var(--colour-body);
+    color: var(--colour-text);
+    width: 100%;
+    min-height: 50px;
+    border: 0;
+    border-radius: 5px;
+    border: 2px solid var(--colour-accent);
+    padding: 10px 20px;
+    resize: vertical;
+    font-family: var(--active-fontFamily);
+    font-size: calc(var(--active-fontSize) / 1.2);
+}
+
+.form-button {
+    background-color: var(--colour-accent);
+    color: var(--colour-navText);
+    width: 100%;
+    height: 30px;
+    border: 0;
+    border-radius: 5px;
+    font-family: var(--active-fontFamily);
+    font-size: calc(var(--active-fontSize) / 1.2);
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
